@@ -14,6 +14,7 @@ Revision 0.3.0, released XX-11-2019
   ECDSA Using SHAKEs
 - Add RFC5753 providing CMS Elliptic Curve Cryptography Algorithms
 - Add RFC3820 providing Proxy Certificates
+- Add RFC3370 providing Cryptographic Message Syntax (CMS) Algorithms
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
